@@ -1,3 +1,9 @@
+2008-05-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm.src (parse_byte_string): HTML5 encoding siniffing
+	algorithm, except for the actual sniffing, is implemented
+	with new framework with Message::Charset::Info.
+
 2008-05-16  Wakaba  <wakaba@suika.fam.cx>
 
 	* CacheManifest.pm (_parse): Drop fragment identifiers from
